# backend

./: .dockerignore  .env  .env.sample  .gitignore  .rustfmt.toml  .rusty-hook.toml  .travis.yml  Cargo.toml  Dockerfile  Dockerfile.template  README.md  build-image.sh  build-tag.sh  builder.Dockerfile  create-db.sql  diesel.toml  docker-compose.yml  docker-entrypoint.sh  internal-api.Dockerfile  makefile  pm.sh  public-api.Dockerfile  start-tools.Dockerfile  swagger.yml
.cargo/: config
.github/workflows/: api-internal.yml  api-public.yml  docker.yml
db/: Cargo.toml
db/src/: lib.rs  schema.rs
deployment/: howtocards.service
internal-api/: Cargo.toml  README.md
internal-api/src/: answer.rs  handlers.rs  main.rs
migrations/2018-09-19-230811_create_users/: up.sql
migrations/2018-09-21-133954_create_tokens/: up.sql
migrations/2018-09-27-123502_create_cards/: up.sql
migrations/2018-09-28-153135_add_updated_at_to_cards/: down.sql  up.sql
migrations/2018-10-29-155232_create_useful_marks/: down.sql  up.sql
migrations/2018-10-29-194654_add_useful_for_to_card/: down.sql  up.sql
migrations/2018-11-01-144912_add_displayname_to_users/: down.sql  up.sql
migrations/2019-02-16-211142_card_change_content_to_jsonb/: down.sql  up.sql
migrations/2019-02-18-194651_add_content_for_search_to_card/: down.sql  up.sql
migrations/2019-09-28-091446_add_gravatar_email/: down.sql  up.sql
migrations/2019-09-28-140611_add_username_and_default_username/: down.sql  up.sql
migrations/2019-10-13-173624_add_index_to_username/: up.sql
migrations/2019-10-13-174104_rename_index_for_users_email/: down.sql  up.sql
migrations/2019-11-27-071112_add_preview_url_to_card/: down.sql  up.sql
migrations/2019-12-15-115212_add_tags_to_cards/: down.sql  up.sql
public-api/: .env.sample  Cargo.toml  README.md  makefile  pm.sh
public-api/src/: app_state.rs  auth.rs  auth_token.rs  gravatar.rs  layer.rs  main.rs  preview.rs  time.rs  views.rs
public-api/src/handlers/account/: create.rs  login.rs  update.rs
public-api/src/handlers/cards/: create.rs  get.rs  list.rs
public-api/src/handlers/search/: mod.rs
public-api/src/handlers/users/: cards_by_author.rs  useful_cards.rs
public-api/src/models/: card.rs  mod.rs  token.rs  useful_mark.rs  user.rs
public-api/src/routes/: account.rs  cards.rs  search.rs  users.rs
public-api/src/slate/: big_example.json  mod.rs
rfc/: 1-jsonrpc.md
src/: app_state.rs  auth.rs  auth_token.rs  consts.rs  db.rs  filedatabase.rs  graphql.rs  hash.rs  hasher.rs  layer.rs  lib.rs  main.rs  models.rs  prelude.rs  sanitize.rs  schema.rs  session.rs  validators.rs  views.rs
src/db/: card.rs  indexable.rs  mod.rs  tables.rs  token.rs  user.rs
src/handlers/: gql.rs  mod.rs
src/handlers/account/: create.rs  login.rs  mod.rs  session_fetch.rs  update.rs
src/handlers/cards/: create.rs  delete.rs  edit.rs  get.rs  is_useful.rs  list.rs  mark_useful.rs  mod.rs  toggle_useful_mark.rs
src/handlers/search/: mod.rs
src/handlers/users/: cards_by_author.rs  get_user.rs  mod.rs  useful_cards.rs
src/models/: card.rs  mod.rs  token.rs  useful_mark.rs  user.rs
src/routes/: account.rs  account_create.rs  account_session.rs  cards.rs  gql.rs  mod.rs  search.rs  user.rs  users.rs
src/slate/: example_slate_document.json
