[package]
authors = ["Sergey Sova <mail@sergeysova.com>"]
description = "Howtocards service backend"
homepage = "https://github.com/howtocards"
license = "MIT"
name = "howtocards"
repository = "https://github.com/howtocards/backend"
version = "0.1.4"
edition = "2018"

[[bin]]
name = "howtocards_server"
path = "./src/main.rs"

[dependencies]
actix_base = { version = "0.7.4", package = "actix" }
actix-web = "0.7.*"
diesel = { version = "1.3.3", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.13.0"
env_logger = "0.5.13"
failure = "0.1.1"
futures = "0.1.23"
serde = "1.0.66"
serde_derive = "1.0.66"
serde_json = "1.0.31"
sha2 = "0.7.1"
uuid = { version = "0.7.1", features = ["serde", "v4"] }
chrono = { version = "0.4.6", features = ["serde"] }
num_cpus = "1.8.0"
