[package]
name = "howtocards-db"
version = "0.1.0"
authors = ["Sergey Sova <mail@sergeysova.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.3", features = ["postgres", "chrono", "serde_json"] }
serde = "1.0.102"
serde_json = "1.0.41"
