[package]
authors = ["Sergey Sova <mail@sergeysova.com>"]
description = "Howtocards internal API"
edition = "2018"
license = "MIT"
name = "howtocards-internal-api"
repository = "https://github.com/howtocards/backend"
version = "0.4.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "howtocards-internal-api"
path = "./src/main.rs"

[dependencies]
actix = "0.8.3"
actix-web = "1.0.8"
diesel = { version = "1.4.3", features = ["postgres", "r2d2", "chrono", "serde_json"] }
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0.41"
env_logger = "0.7.1"
futures = "0.1.25"
howtocards-db = { "path" = "../db" }
r2d2 = "0.8.6"
dotenv = "0.15.0"
actix-http = "0.2.11"
